mongo db kaldırıldı

--- a/microstok-product/src/main/resources/application.properties
+++ b/microstok-product/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.Str
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
