--- a/microstok-product/pom.xml
+++ b/microstok-product/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>io.github.acihang</groupId>
+	<groupId>com.microstok</groupId>
 	<artifactId>microstok-product</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>microstok-product</name>
