--- a/microstok-product/src/main/resources/application.properties
+++ b/microstok-product/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8085
+
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 spring.kafka.consumer.bootstrap-servers = localhost:9092
