--- a/microstok-payment/src/main/resources/application.properties
+++ b/microstok-payment/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.port=8086
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+
+spring.kafka.consumer.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id= microstok
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.type.mapping=product:com.cihanalidev.microstokproduct.model.Product
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.kafka.producer.bootstrap-servers = localhost:9092
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
