--- a/microstok-payment/src/main/resources/docker-compose.yml
+++ b/microstok-payment/src/main/resources/docker-compose.yml
@@ -30,8 +30,8 @@ services:
   mongodb:
     image: mongo:latest
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin	
-      MONGO_INITDB_ROOT_PASSWORD: 123
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: rootpassword
     ports:
       - 27017:27017
     volumes:
