--- a/microstok-product/src/main/resources/application.properties
+++ b/microstok-product/src/main/resources/application.properties
@@ -3,15 +3,20 @@ server.port=8085
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
 spring.kafka.consumer.bootstrap-servers = localhost:9092
-spring.kafka.consumer.group-id= group_id
+spring.kafka.consumer.group-id= microstok
 spring.kafka.consumer.auto-offset-reset = earliest
-spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 
 spring.kafka.producer.bootstrap-servers = localhost:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=product:com.cihanalidev.microstokproduct.model.Product
+spring.kafka.producer.properties.spring.json.add.type.headers=true
 
 
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+spring.data.mongodb.database=microstok
+spring.data.mongodb.host=192.168.1.104
+spring.data.mongodb.username=cihanali
+spring.data.mongodb.password=123123
+spring.data.mongodb.port=27017
